--- a/t.tex
+++ b/t.tex
@@ -38,20 +38,20 @@
 
 
 \begin{document}
-%\input{title.tex}
-%\tableofcontents
-%
-%\chapter{Introduction}
-%\input{intro.tex}
-%
-%\chapter{Theory}
-%\input{theory.tex}
-%
-%\chapter{Numerical methods}
-%\input{numeric.tex}
-%
-%\chapter{Experimental methods}
-%\input{expe.tex}
+\input{title.tex}
+\tableofcontents
+
+\chapter{Introduction}
+\input{intro.tex}
+
+\chapter{Theory}
+\input{theory.tex}
+
+\chapter{Numerical methods}
+\input{numeric.tex}
+
+\chapter{Experimental methods}
+\input{expe.tex}
 
 \chapter{Results}
 \input{result.tex}
