--- a/theory.tex
+++ b/theory.tex
@@ -1205,8 +1205,7 @@ Periodic structures denoted as \textit{artificial dielectrics} \cite{brown1955pr
 
 In the approximation of local media, the \textit{effective permittivity} $\eeff(\omega)$ of this type of artificial dielectrics had therefore a frequency range of negative values, or at least lower than one. This feature lead to the occasional use of the term \textit{artificial plasma} \cite{merkel1973simulation}. 
 
-In all cases of $\eeff(\omega)<1$, the effective refractive index $\Neff(\omega)$ was also lower than that of vacuum \cite{brown1953artificial}, but, following
-Eq. (\ref{eq_dispeqN}), 
+In all cases of $\eeff(\omega)<1$, the effective refractive index $\Neff(\omega)$ was also lower than that of vacuum \cite{brown1953artificial}, but, as follows from
 \begin{equation} N(\omega) := k(\omega) \, \frac{c}{\omega} \equiv \sqrt{\epsrl(\omega)\murl(\omega)}, \tag{\ref{eq_dispeqN}\again} \end{equation}
 it could not become negative, since the effective permeability $\meff(\omega) > 0$ was still positive. The unit cell size was kept much smaller than the wavelength, so the problem of \textit{homogenization} appeared as settled and the nonlocal effects apparently did not cause much concern.
 
