--- a/conclusion.tex
+++ b/conclusion.tex
@@ -34,8 +34,12 @@
 %         stress the importance of taking the spatial dispersion into account
 %      3) the s-parameter method, although widely used, does not always give correct results
 %  * illustrated the difference of these results against CDH
-%  * provide the simulation environment which facilitates correct computations, 
-%    and solves the phase-ambiguity in the s-parameter method in an original way
+%  * provide the simulation environment which facilitates correct computations,  and solves 
+%	 the phase-ambiguity in the s-parameter method in an original way.
+%    We validated these FDTD computations against
+%     1) the H-bars spectra in the NumMet section
+%	  2) the Pendry's and Maslovski's models for f_p
+%	  3) ...
 %  * express author's opinions on: 
 %		1) viability of the "information velocity"   
 %		2) local media application   
